Bug 15991 - samba not triggering mount of zfs snapshot in dataset .zfs/snapshots/<snapname> directory
Summary: samba not triggering mount of zfs snapshot in dataset .zfs/snapshots/<snapnam...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: x64 Linux
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-29 21:25 UTC by Shane Nehring
Modified: 2026-05-12 15:55 UTC (History)
3 users (show)

See Also:


Attachments
simple patch to fix zfs automounting of snapshots (734 bytes, patch)
2026-02-03 17:09 UTC, Shane Nehring
no flags Details
Patch in git-am format (1.07 KB, patch)
2026-02-05 09:12 UTC, Volker Lendecke
no flags Details
4.24 patch (4.02 KB, patch)
2026-04-28 09:10 UTC, Pavel Filipenský
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shane Nehring 2026-01-29 21:25:15 UTC
I came across 15805 when looking for people reporting similar issues, and I think this bug is very related. I did try running 4.24.0rc1 to see if the patches for that would help here and they do not.

It used to be samba would display the contents of the <dataset root>/.zfs/snapshots/<snapshot name> directory when you navigated to that path on a share. Now the directories are shown as empty. I'm not really sure when exactly this started, but we noticed it after we moved to el9 from el7. It's rare for our users to view snapshots in this manner, usually they use the 'previous versions' tab in properties to view snapshots, which still works, but people using linux clients don't have that functionality.

When you navigate to a snapshot directory in a shell on the machine with the dataset the underlying snapshot is automatically mounted at that path. I assume that samba is no longer triggering the automount behavior just like in 15805. If I understand the test program and patch series in 15805 correctly the issue with autofs is being worked around by handling autofs as a special case and retrying to open the path the old way (without O_PATH). If I adapt the test program from 15805 to this directory structure I'm able to reproduce the issue, and if I add a case to match the zfs magic number entries in the snapshot enumerate as expected. However I'm not sure if that's a reasonable way to approach the problem.
Comment 1 Volker Lendecke 2026-02-03 16:14:48 UTC
Do you want to augment the (sbuf.f_type == AUTOFS_SUPER_MAGIC) line with some value that your file system sets? I don't see anything for ZFS in /usr/include/linux/magic.h.
Comment 2 Shane Nehring 2026-02-03 16:36:52 UTC
That is probably the easiest way to go about it. However in the case of ZFS I'm not really sure the best way to get the magic number. ZFS_SUPER_MAGIC is 0x2fc12fc1 and is defined in the ZFS source at include/sys/fs/zfs.h, but requiring the ZFS source won't help people on distributions that package samba but not OpenZFS. ZFS_SUPER_MAGIC has not changed values since it was defined (as far as I can tell).
Comment 3 Shane Nehring 2026-02-03 17:09:36 UTC
Created attachment 18822 [details]
simple patch to fix zfs automounting of snapshots
Comment 4 Shane Nehring 2026-02-03 17:11:37 UTC
If you think that'd be acceptable I can work out how to submit it, it does fix my issue. I don't know how folks would feel about just throwing the ZFS magic number in there.
Comment 5 Volker Lendecke 2026-02-05 09:12:52 UTC
Created attachment 18824 [details]
Patch in git-am format

Attached find a patch in git-format.

We'd also want a developer declaration according to https://www.samba.org/samba/devel/copyright-policy.html

One caveat though: Is the ZFS_MAGIC value copyrightable, i.e. does that number fall under the CDDL, which is incompatible with the GPL? I don't know if we can even include that. Can others chime in here?
Comment 6 Shane Nehring 2026-02-05 18:19:27 UTC
I've reached out on the OpenZFS slack as well for input regarding the license question.
Comment 7 Shane Nehring 2026-02-05 21:13:34 UTC
The general vibe of responses I've gotten on the OpenZFS slack is 'it's probably fine'. The value of ZFS_SUPER_MAGIC is just a number and probably not copyrightable, but even if it were this use of it would likely be fair use. I am not a lawyer, nor are the folks that responded there.
Comment 8 Shane Nehring 2026-02-24 20:16:24 UTC
I've submitted a MR on the gitlab for this (https://gitlab.com/samba-team/samba/-/merge_requests/4434), we'll see if that's acceptable.
Comment 9 Pavel Filipenský 2026-03-18 21:08:05 UTC
Here is what AI says about the ZFS_MAGIC value being copyrightable:

Legal Analysis: "Magic Numbers as Facts"

  There's an argument that:
  - The magic number is returned by the Linux kernel's statfs() syscall
  - It's a published interface value, not creative expression
  - Simple numeric constants may not be copyrightable
Comment 10 Pavel Filipenský 2026-04-07 17:25:33 UTC
I am creating also alternative/generic implementation that avoids discussion if the ZFS magic number is copyrightable:

https://gitlab.com/samba-team/samba/-/merge_requests/4483

The fs types can be specified via smb.conf, e.g. 

automount fs types = 0x2fc12fc1
Comment 11 Samba QA Contact 2026-04-20 19:58:03 UTC
This bug was referenced in samba master:

45b6cd3852949e74ea4a26e5d5e9c0eee97c3b27
Comment 12 Pavel Filipenský 2026-04-28 09:10:24 UTC
Created attachment 18951 [details]
4.24 patch
Comment 13 Andreas Schneider 2026-04-28 11:54:31 UTC
Comment on attachment 18951 [details]
4.24 patch

lgtm
Comment 14 Andreas Schneider 2026-04-28 11:55:04 UTC
Björn, please include it in the next release.
Comment 15 Samba QA Contact 2026-05-12 14:57:28 UTC
This bug was referenced in samba v4-24-test:

a820412c178db475284f73b806406fcbe2ebca14
Comment 16 Samba QA Contact 2026-05-12 15:55:04 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.2):

a820412c178db475284f73b806406fcbe2ebca14