smbdotconf: Add "automount fs types" to smb.conf

This adds a new global parameter "automount fs types" that allows
administrators to configure additional filesystem types that should
trigger automounting, beyond the always-supported autofs filesystem.

To enable 'samba unaware FS' automounting, add:

    automount fs types = 0x12345678

This allows e.g. ZFS snapshots in <dataset root>/.zfs/snapshot to be
mounted. To find out the magic number that is not listed
in /usr/include/linux/magic.h, run:

    stat -f -c '0x%t' /path/to/mountpoint

BUG: https://bugzilla.samba.org/show_bug.cgi?id=15991

Signed-off-by: Pavel Filipenský <pfilipensky@samba.org>
Reviewed-by: Samuel Cabrero <scabrero@samba.org>

Autobuild-User(master): Pavel Filipensky <pfilipensky@samba.org>
Autobuild-Date(master): Mon Apr 20 19:57:42 UTC 2026 on atb-devel-224

(cherry picked from commit 45b6cd3852949e74ea4a26e5d5e9c0eee97c3b27)